further fixing of website, including spacing issues and removing the popup divs that appear when you are right or wrong

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,34 @@
-body {
+/*body {
 	background-image: url("../images/confetti.jpeg");
+}*/
+
+.bg {
+	background-repeat: no-repeat; 
+	background-attachment:fixed;
+	background-position: center 0px;
+	background-size: cover;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	top: 0;
+}
+
+#bg1 {
+	background-color: crimson;
 }
 
 .question {
-	color: red;
+	color: #463d3d;;
 	font-size: 25px;
 }
 
 .option {
-	color: blue;
+	color: #463d3d;;
 	border: 2px solid black;
 	margin: 5px 0;
 	padding: 15px 0;
-	background-color: wheat;
+	background-color: #ade6ff;;
 	border-radius: 10px;
 }
 
@@ -33,7 +49,7 @@ h1 {
 }
 
 .backing {
-	background: wheat;
+	background: #ade6ff;;
 	border: 2px solid black;
 	border-radius: 10px;
 	padding: 10px;
@@ -48,7 +64,7 @@ h1 {
 	display: none;
 	border: 2px solid black;
 	padding: 10px;
-	background: wheat;
+	background: #ade6ff;;
 	border-radius: 10px;
 	margin: 15px 0;
 }
@@ -56,7 +72,28 @@ h1 {
 button {
 	margin: 10px;
 	border-radius: 5px;
-	background: wheat;
+	background: #ade6ff;;
 	border: 2px solid;
 	padding: 10px;
+}
+
+div {
+	font-family: 'Racing Sans One', cursive;
+	font-size: 30px;
+}
+
+.blockHeight {
+	height: 100px;
+	margin-bottom: 10px;
+	margin-top: 0;
+}
+
+.vertAlign {
+	vertical-align: middle;
+}
+
+@media screen and (max-width: 992px){
+	.timerDiv {
+		height: auto;
+	}
 }
